# aws-terraform

./: .gitignore  LICENSE  README.md
global/standard_vpc/: outputs.tf
rest-api-mongodb-failover/: main.tf  variables.tf
rest-api-mongodb-failover/api-gateway/: main.tf  outputs.tf  variables.tf
rest-api-mongodb-failover/database-fail-over-alarm/: main.tf  outputs.tf  varaibles.tf
rest-api-mongodb-failover/lambda_document_db_fail_over/: Dockerfile  push_lambda_image_to_ecr.sh  pyproject.toml
rest-api-mongodb-failover/lambda_document_db_fail_over/infrastructure/: main.tf  variables.tf
rest-api-mongodb-failover/lambda_document_db_fail_over/src/: lambda_handler.py
rest-api-mongodb-failover/module_alb/: main.tf  outputs.tf  variables.tf
rest-api-mongodb-failover/module_alb_https_listener/: main.tf  variables.tf
rest-api-mongodb-failover/module_ecs/: main.tf  variables.tf
rest-api-mongodb-failover/rest-api/: main.tf  outputs.tf  variables.tf
simple-app-fail-over/: main.tf  variables.tf
simple-app-fail-over/module_alb/: main.tf  outputs.tf  variables.tf  zone_display.sh
simple-app-fail-over/module_vpc/: main.tf  variables.tf
